# adventofcode2022

./: new_day.ps1
day01/src/: main.rs
day02/src/: main.rs
day03/src/: main.rs
day04/: input_example2  maunal_counting_example2.txt
day04/src/: main.rs
day05/: Cargo.toml
day05/benches/: bench_day05.rs
day05/src/: lib.rs  main.rs
day07/: Cargo.toml
day07/benches/: bench_day07.rs
day07/src/: lib.rs  main.rs  tests.rs  v1.rs  v2.rs  v2_smartstring.rs  v3.rs  v4.rs  v5.rs
day08/: Cargo.toml
day08/benches/: bench_day08.rs
day08/src/: lib.rs  main.rs  tests.rs  v1.rs  v2.rs  v3.rs  v4.rs  v5.rs
day0x/: Cargo.toml
day0x/benches/: bench_day0x.rs
day0x/src/: lib.rs  main.rs
