[package]
name = "day08"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench_day08"
harness = false

[dependencies]
color-eyre = { version = "0.6.2" }
generator = "0.7.2"
to_vec = "0.1.0"
